# norns

./: .gitignore
crone/: CMakeLists.txt
